# fprime-stm32h7-zephyr-reference

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  prj.conf  project.cmake  requirements.txt  settings.ini  setup.sh  temp.md
Components/: CMakeLists.txt
Components/FatalHandler/: FatalHandler.cpp  FatalHandler.hpp
Components/Led/: Led.cpp  Led.fpp  Led.hpp
ReferenceDeployment/: CMakeLists.txt  Main.cpp  README.md
ReferenceDeployment/Top/: CMakeLists.txt  ReferenceDeploymentPackets.xml  ReferenceDeploymentTopology.cpp  ReferenceDeploymentTopology.hpp  ReferenceDeploymentTopologyDefs.hpp  instances-zephyr.fpp  instances.fpp  topology.fpp
config/: CMakeLists.txt  FpConfig.h
docs/: Arduino-STM32CubeProgrammer-Arm-Issue.md  board-list.md
docs/additional-resources/: board-list.md  specifying-board-configuration.md  troubleshooting.md
docs/main-content/: build-flash-run.md  initial-setup.md
docs/uploading/: stm32.md
lib/zephyr-workspace/.west/: config
lib/zephyr-workspace/boards/st/stm32h753i_eval/: Kconfig.defconfig  Kconfig.stm32h753i_eval  board.cmake  board.yml  prj.conf  stm32h753i_eval.dts  stm32h753i_eval.dtsi  stm32h753i_eval_defconfig
project/config/: FpConfig2.h
